CHANGES.txt - 2011-06-05
------------------------

CHANGES IN CUPS V1.5rc1

	- The dnssd backend took too long to discover printers on large or busy
	  networks with the new default timeout used by lpinfo and the web
	  interface. This resulted in "lost" printers.


CHANGES IN CUPS V1.5b2

	- Documentation updates.
	- Localization updates (STR #3845)
	- Compiler warning cleanup.
	- Fixed PIE support for Linux (STR #3846)
	- Made httpSetTimeout API public and use it in the IPP backend to avoid
	  timeout errors.
	- The scheduler incorrectly set the "authenticated" printer-type bit for
	  remote queues using authentication.


CHANGES IN CUPS V1.5b1

	- The CUPS library now supports per-connection HTTP timeouts and
	  callbacks.
	- The CUPS library now supports (limited) SSL/TLS X.509 certificate
	  validation and revocation (STR #1616)
	- Updated the PostScript filter to support IncludeFeature in more
	  circumstances (STR #3417)
	- The schedule did not correctly parse some IPv6 addresses and masks in
	  the cupsd.conf file (STR #3533)
	- Fixed a case-insensitive string comparison issue for locales that do
	  not treat "I" and "i" as equivalent (STR #3800)
	- The scheduler reported an incorrect job-printer-uri value when sharing
	  was not enabled (STR #3639)
	- The scheduler now allows the ServerAlias directive to contain multiple
	  hostnames separated by spaces or commas (STR #3813)
	- The scheduler now sets the process group for child processes and
	  manages the group (STR #2829)
	- Fixed some minor issues discovered by a Coverity scan (STR #3838)
	- The scheduler now more carefully creates and removes configuration,
	  cache, and state files (STR #3715)
	- The lpadmin command now allows default option values to be deleted
	  (STR #2959)
	- The lpadmin command now allows the cupsIPPSupplies and
	  cupsSNMPSupplies keywords to be set in a PPD file (STR #3825)
	- Moving a held job no longer releases it (STR #3839)