@@ -1,8 +1,9 @@
-CHANGES.txt - 2011-06-05
+CHANGES.txt - 2011-06-08
 ------------------------
 
 CHANGES IN CUPS V1.5rc1
 
+	- The cups-driverd program could crash when a PPD was renamed.
 	- The dnssd backend took too long to discover printers on large or busy
 	  networks with the new default timeout used by lpinfo and the web
 	  interface. This resulted in "lost" printers.
